UI z-index fix. CHKOUT-1341

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/mpl_egv.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/mpl_egv.css
@@ -733,7 +733,7 @@
 .createWalletModel {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
+	z-index: 6; /* Sit on top */
 	padding-top: 100px; /* Location of the box */
 	left: 0;
 	top: 0;
